// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableArea[Base] should render correctly  1`] = `
<div
  class="cwurz76 soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="ckboheu soui-editableArea-place c-bpcrxw soui-editableArea-wrapper-padding-box cb7dytd soui-editableArea-wrapper-inner-title-top cw07urj soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="cm7db6g soui-editableArea-content"
    >
      <span
        class="c-eshfou soui-editableArea-placeholder"
      >
        input something
      </span>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  2`] = `
<div
  class="cwurz76 soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="ckboheu soui-editableArea-place c-bpcrxw soui-editableArea-wrapper-padding-box cb7dytd soui-editableArea-wrapper-inner-title-top cw07urj soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="cm7db6g soui-editableArea-content"
    >
      i am a long text, i am a long text, i am a long text
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  3`] = `
<div
  id="popup-target"
  style="height: 100px; overflow-y: auto; position: relative; padding: 10px; margin-left: -10px;"
>
  <div
    style="height: 50px;"
  />
  <div
    class="cwurz76 soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="ckboheu soui-editableArea-place c-bpcrxw soui-editableArea-wrapper-padding-box cb7dytd soui-editableArea-wrapper-inner-title-top cw07urj soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="cm7db6g soui-editableArea-content"
      >
        <span
          class="c-eshfou soui-editableArea-placeholder"
        >
          scroll in container
        </span>
      </div>
    </div>
  </div>
  <div
    style="height: 140px;"
  />
</div>
`;

exports[`EditableArea[Base] should render correctly  4`] = `
<div>
  <div
    class="cwurz76 soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="ckboheu soui-editableArea-place c-bpcrxw soui-editableArea-wrapper-padding-box cb7dytd soui-editableArea-wrapper-inner-title-top cw07urj soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="cm7db6g soui-editableArea-content"
      >
        <span
          class="c-eshfou soui-editableArea-placeholder"
        >
          input something
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  5`] = `
<div>
  <div
    class="cwurz76 soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="ckboheu soui-editableArea-place c-bpcrxw soui-editableArea-wrapper-padding-box cb7dytd soui-editableArea-wrapper-inner-title-top cw07urj soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="cm7db6g soui-editableArea-content"
      >
        <div>
          Guessing what I inputed ?
        </div>
      </div>
    </div>
  </div>
</div>
`;
